DRTII-1087 Add incoming & outgoing

--- a/server/src/main/assets/stylesheets/main.less
+++ b/server/src/main/assets/stylesheets/main.less
@@ -1428,6 +1428,12 @@ p {
   gap: 0px;
 }
 
+.pax-queue-nos {
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+}
+
 // Usage table
 
 .usage-table {
