DRTII-693 | Fixed modal focus and save/cancel tab order. (#2324)
Signed-off-by: slawekb <259381811+slawomirbedraHO@users.noreply.github.com>

--- a/server/src/main/assets/stylesheets/main.less
+++ b/server/src/main/assets/stylesheets/main.less
@@ -558,8 +558,13 @@ table.headlines tr:nth-child(odd) {
   margin: 5px 5px 5px 5px;
 }
 
+#staff-adjustment-dialogue .btn-toolbar {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .staff-adjustment--save-cancel.btn.btn-default, .staff-adjustment--save-cancel.btn.btn-primary {
-  float: right;
+  float: none;
 }
 
 .date-selector {
